Updated preprocessor notebook
1. Updated saved csv format to csv.gz format.
2. Dataset csv files get compressed before they are saved, reducing the amount of space consumed,

--- a/tools/preprocessor.ipynb
+++ b/tools/preprocessor.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fa80da04",
    "metadata": {},
    "source": [
     "# Preprocessor"
@@ -11,7 +10,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "966a6ca8",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +33,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e58a6eda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +50,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "df831eba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +65,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "4046e86e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +79,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "3992f73b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +89,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "685d1026",
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +109,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2bb3a4be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +127,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "18cb7ab9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +137,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ccafdc62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +146,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "6037995d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +155,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "cfc8e7c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,19 +166,17 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "35b1f7a1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df.to_csv(os.path.join(dest_folder, \"test_text.csv\"))\n",
-    "train_df.to_csv(os.path.join(dest_folder, \"train_text.csv\"))\n",
-    "val_df.to_csv(os.path.join(dest_folder, \"val_text.csv\"))"
+    "test_df.to_csv(os.path.join(dest_folder, \"test_text.csv.gz\"), index=False, compression='gzip')\n",
+    "train_df.to_csv(os.path.join(dest_folder, \"train_text.csv.gz\"), index=False, compression='gzip')\n",
+    "val_df.to_csv(os.path.join(dest_folder, \"val_text.csv.gz\"), index=False, compression='gzip')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4200fbf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -217,7 +203,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
