Updated csv column name
1. Updated csv label column name to 'labels'. previously it was 'label'.

--- a/tools/preprocessor.ipynb
+++ b/tools/preprocessor.ipynb
@@ -158,9 +158,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df = pd.DataFrame({'input': X_train, 'label': y_train})\n",
-    "val_df = pd.DataFrame({'input': X_val, 'label': y_val})\n",
-    "test_df = pd.DataFrame({'input': test_input, 'label': test_labels})"
+    "train_df = pd.DataFrame({'input': X_train, 'labels': y_train})\n",
+    "val_df = pd.DataFrame({'input': X_val, 'labels': y_val})\n",
+    "test_df = pd.DataFrame({'input': test_input, 'labels': test_labels})"
    ]
   },
   {
