--- a/tools/preprocessor.ipynb
+++ b/tools/preprocessor.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "97c2cc78",
    "metadata": {},
    "source": [
     "# Preprocessor"
@@ -9,7 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
+   "id": "3514e3c6",
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +34,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
+   "id": "427559ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +52,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
+   "id": "88f5c2d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copying gs://text-analysis-323506/data/data_archive.zip...\n",
+      "Archive:  /home/jupyter/data/data_archive.zip                                   \n",
+      "  inflating: test.ft.txt.bz2         \n",
+      "  inflating: train.ft.txt.bz2        \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Copy the raw data from GCS bucket, unzip it\n",
+    "! gsutil -m cp -r gs://text-analysis-323506/data /home/jupyter\n",
+    "! unzip /home/jupyter/data/data_archive.zip \n",
+    "! bzip2 -d train.ft.txt.bz2 \n",
+    "! bzip2 -d test.ft.txt.bz2\n",
+    "! mv *.ft.txt /home/jupyter/data/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "da5b6e54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +94,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
+   "id": "797a6a03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,17 +109,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
+   "id": "24774fa3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# load the text files\n",
     "train_data = load_data(train_file)\n",
     "test_data = load_data(test_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
+   "id": "71ffe092",
    "metadata": {},
    "outputs": [
     {
@@ -97,18 +131,20 @@
        "'__label__2 Stuning even for the non-gamer: This sound track was beautiful! It paints the senery in your mind so well I would recomend it even to people who hate vid. game music! I have played the game Chrono Cross but out of all of the games I have ever played it has the best music! It backs away from crude keyboarding and takes a fresher step with grate guitars and soulful orchestras. It would impress anyone who cares to listen! ^_^\\n'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# An entry from train file\n",
     "train_data[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
+   "id": "bc6c803e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,38 +162,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
+   "id": "1f080fe0",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Splits the data in original text file into texts and labels\n",
     "train_input, train_labels = get_data_labels(train_data)\n",
     "test_input, test_labels = get_data_labels(test_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
+   "id": "9614d55a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Shuffle the train set\n",
     "train_data_shuffled, train_labels_shuffled = shuffle(train_input, train_labels)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
+   "id": "0ffe34cc",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Split train set into traina dn validation sets\n",
     "X_train, X_val, y_train, y_val = train_test_split(train_data_shuffled, train_labels_shuffled, test_size=0.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
+   "id": "ce9292dc",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Converting train, test, validation sets into dataframes for easy access later during training\n",
     "train_df = pd.DataFrame({'input': X_train, 'labels': y_train})\n",
     "val_df = pd.DataFrame({'input': X_val, 'labels': y_val})\n",
     "test_df = pd.DataFrame({'input': test_input, 'labels': test_labels})"
@@ -165,10 +209,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
+   "id": "65f37311",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape of train data: (2880000, 2)\n",
+      "Shape of validation data: (720000, 2)\n",
+      "Shape of train data: (400000, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Shapes of each set\n",
+    "print(f\"Shape of train data: {train_df.shape}\")\n",
+    "print(f\"Shape of validation data: {val_df.shape}\")\n",
+    "print(f\"Shape of train data: {test_df.shape}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "cebfd053",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Save dataframes as csv files. Gzip compression is applied to reduce the size of each csv file\n",
     "test_df.to_csv(os.path.join(dest_folder, \"test_text.csv.gz\"), index=False, compression='gzip')\n",
     "train_df.to_csv(os.path.join(dest_folder, \"train_text.csv.gz\"), index=False, compression='gzip')\n",
     "val_df.to_csv(os.path.join(dest_folder, \"val_text.csv.gz\"), index=False, compression='gzip')"
@@ -176,7 +245,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "id": "2e4e2b18",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  adding: home/jupyter/train_data/ (stored 0%)\n",
+      "Copying file://train_data.zip [Content-Type=application/zip]...\n",
+      "Removing file://train_data.zip...] 100% Done                                    \n",
+      "\n",
+      "Operation completed over 1 objects/198.0 B.                                      \n"
+     ]
+    }
+   ],
+   "source": [
+    "# If required, move the final train dataset back to GCS bucket. To train using AI Platform, train data needs to be in a GCS bucket.\n",
+    "! zip -r train_data.zip /home/jupyter/train_data\n",
+    "! gsutil -m mv train_data.zip gs://text-analysis-323506/"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
+   "id": "0f95bca7",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -184,9 +278,9 @@
  ],
  "metadata": {
   "environment": {
-   "name": "tf2-gpu.2-5.m76",
+   "name": "tf2-gpu.2-6.m78",
    "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-5:m76"
+   "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-6:m78"
   },
   "kernelspec": {
    "display_name": "Python 3",
@@ -203,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
