Updating preprocessor and ai_platform_trainer notebooks
1. Fixed a problem in preprocessor notebook which caused the created data zip file to contain multiple unwanted directories.
2. Updated ai_platform_trainer for the current project.

--- a/detectors/tf_gcp/ai_platform_trainer.ipynb
+++ b/detectors/tf_gcp/ai_platform_trainer.ipynb
@@ -9,16 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!sudo chown -R jupyter:jupyter /home/jupyter/Cancer-Detection-using-GCP"
+    "!sudo chown -R jupyter:jupyter /home/jupyter/Amazon-Reviews-Analysis"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,30 +27,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PROJECT = 'vernal-buffer-285906'\n",
-    "REGION = 'us-west1'\n",
-    "BUCKET = 'vernal-buffer-285906'"
+    "PROJECT = 'text-analysis-323506'\n",
+    "REGION = 'us-west1-b'\n",
+    "BUCKET = 'text-analysis-323506'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "os.environ['BUCKET'] = BUCKET\n",
     "os.environ['PROJECT'] = PROJECT\n",
     "os.environ['REGION'] = REGION\n",
-    "os.environ['TFVERSION'] = '2.3'"
+    "os.environ['TFVERSION'] = '2.6'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,9 @@
      "output_type": "stream",
      "text": [
       "Updated property [core/project].\n",
-      "Updated property [compute/region].\n"
+      "WARNING: You do not appear to have access to project [text-analysis-323506] or it does not exist.\n",
+      "Updated property [compute/region].\n",
+      "WARNING: us-west1-b is not a valid region. Run `gcloud compute regions list`to get all regions.\n"
      ]
     }
    ],
@@ -115,17 +117,17 @@
     "gsutil -m cp -r ../../config gs://$BUCKET\n",
     "\n",
     "# Set PYTHONPATH enviornment variable\n",
-    "export PYTHONPATH=${PYTHONPATH}:/home/jupyter/Cancer-Detection-using-GCP/\n",
+    "export PYTHONPATH=${PYTHONPATH}:/home/jupyter/Amazon-Reviews-Analysis\n",
     "\n",
     "# Specify a unique name for the job.\n",
-    "JOBNAME=breastcancer_$(date -u +%y%m%d_%H%M%S)\n",
+    "JOBNAME=sentiment_analysis_$(date -u +%y%m%d_%H%M%S)\n",
     "echo $REGION $JOBNAME\n",
     "\n",
     "# Submit training job\n",
     "gcloud ai-platform jobs submit training $JOBNAME \\\n",
     "  --region=$REGION \\\n",
     "  --module-name=detectors.tf_gcp.trainer.task \\\n",
-    "  --package-path=/home/jupyter/Cancer-Detection-using-GCP/detectors/ \\\n",
+    "  --package-path=/home/jupyter/Amazon-Reviews-Analysis/ \\\n",
     "  --job-dir=gs://$BUCKET \\\n",
     "  --staging-bucket=gs://$BUCKET \\\n",
     "  --scale-tier=BASIC_GPU \\\n",
@@ -160,9 +162,9 @@
  ],
  "metadata": {
   "environment": {
-   "name": "tf2-gpu.2-3.m75",
+   "name": "tf2-gpu.2-6.m78",
    "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-3:m75"
+   "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-6:m78"
   },
   "kernelspec": {
    "display_name": "Python 3",
