--- a/tools/preprocessor.ipynb
+++ b/tools/preprocessor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "97c2cc78",
+   "id": "41949a8d",
    "metadata": {},
    "source": [
     "# Preprocessor"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3514e3c6",
+   "id": "21df36ca",
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "427559ea",
+   "id": "82576b54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "88f5c2d2",
+   "id": "efcbc990",
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "da5b6e54",
+   "id": "e290b51c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "797a6a03",
+   "id": "38e02f74",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "24774fa3",
+   "id": "6bada60b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "71ffe092",
+   "id": "d484903a",
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "bc6c803e",
+   "id": "5f88d366",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "1f080fe0",
+   "id": "6dcf81ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9614d55a",
+   "id": "078b585a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "0ffe34cc",
+   "id": "fb09b71c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "ce9292dc",
+   "id": "5d1cebce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "65f37311",
+   "id": "d1798713",
    "metadata": {},
    "outputs": [
     {
@@ -233,20 +233,20 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "cebfd053",
+   "id": "c27d3b39",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save dataframes as csv files. Gzip compression is applied to reduce the size of each csv file\n",
-    "test_df.to_csv(os.path.join(dest_folder, \"test_text.csv.gz\"), index=False, compression='gzip')\n",
     "train_df.to_csv(os.path.join(dest_folder, \"train_text.csv.gz\"), index=False, compression='gzip')\n",
-    "val_df.to_csv(os.path.join(dest_folder, \"val_text.csv.gz\"), index=False, compression='gzip')"
+    "val_df.to_csv(os.path.join(dest_folder, \"val_text.csv.gz\"), index=False, compression='gzip')\n",
+    "test_df.to_csv(os.path.join(dest_folder, \"test_text.csv.gz\"), index=False, compression='gzip')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "2e4e2b18",
+   "id": "0667c7c7",
    "metadata": {},
    "outputs": [
     {
@@ -263,14 +263,15 @@
    ],
    "source": [
     "# If required, move the final train dataset back to GCS bucket. To train using AI Platform, train data needs to be in a GCS bucket.\n",
-    "! zip -r train_data.zip /home/jupyter/train_data\n",
+    "! mv /home/jupyter/train_data ./\n",
+    "! zip -r train_data.zip ./train_data\n",
     "! gsutil -m mv train_data.zip gs://text-analysis-323506/"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0f95bca7",
+   "id": "fdccf357",
    "metadata": {},
    "outputs": [],
    "source": []
