--- a/detectors/tf_gcp/ai_platform_trainer.ipynb
+++ b/detectors/tf_gcp/ai_platform_trainer.ipynb
@@ -11,7 +11,15 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "chown: cannot access '/home/jupyter/Amazon-Reviews-Analysis': No such file or directory\n"
+     ]
+    }
+   ],
    "source": [
     "!sudo chown -R jupyter:jupyter /home/jupyter/Amazon-Reviews-Analysis"
    ]
@@ -27,18 +35,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "PROJECT = 'text-analysis-323506'\n",
-    "REGION = 'us-west1-b'\n",
+    "REGION = 'us-west1'\n",
     "BUCKET = 'text-analysis-323506'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -59,8 +67,7 @@
      "text": [
       "Updated property [core/project].\n",
       "WARNING: You do not appear to have access to project [text-analysis-323506] or it does not exist.\n",
-      "Updated property [compute/region].\n",
-      "WARNING: us-west1-b is not a valid region. Run `gcloud compute regions list`to get all regions.\n"
+      "Updated property [compute/region].\n"
      ]
     }
    ],
@@ -79,15 +86,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "us-west1 breastcancer_210725_165743\n",
-      "jobId: breastcancer_210725_165743\n",
+      "us-west1 sentiment_analysis_210909_132315\n",
+      "jobId: sentiment_analysis_210909_132315\n",
       "state: QUEUED\n"
      ]
     },
@@ -97,16 +104,16 @@
      "text": [
       "Copying file://../../config/config.yaml [Content-Type=application/octet-stream]...\n",
       "Copying file://../../config/.ipynb_checkpoints/config-checkpoint.yaml [Content-Type=application/octet-stream]...\n",
-      "/ [2/2 files][  2.9 KiB/  2.9 KiB] 100% Done                                    \n",
-      "Operation completed over 2 objects/2.9 KiB.                                      \n",
-      "Job [breastcancer_210725_165743] submitted successfully.\n",
+      "/ [2/2 files][  3.2 KiB/  3.2 KiB] 100% Done                                    \n",
+      "Operation completed over 2 objects/3.2 KiB.                                      \n",
+      "Job [sentiment_analysis_210909_132315] submitted successfully.\n",
       "Your job is still active. You may view the status of your job with the command\n",
       "\n",
-      "  $ gcloud ai-platform jobs describe breastcancer_210725_165743\n",
+      "  $ gcloud ai-platform jobs describe sentiment_analysis_210909_132315\n",
       "\n",
       "or continue streaming the logs with the command\n",
       "\n",
-      "  $ gcloud ai-platform jobs stream-logs breastcancer_210725_165743\n"
+      "  $ gcloud ai-platform jobs stream-logs sentiment_analysis_210909_132315\n"
      ]
     }
    ],
@@ -127,11 +134,11 @@
     "gcloud ai-platform jobs submit training $JOBNAME \\\n",
     "  --region=$REGION \\\n",
     "  --module-name=detectors.tf_gcp.trainer.task \\\n",
-    "  --package-path=/home/jupyter/Amazon-Reviews-Analysis/ \\\n",
+    "  --package-path=/home/jupyter/Sentiment-Analysis-of-Amazon-Reviews/detectors \\\n",
     "  --job-dir=gs://$BUCKET \\\n",
     "  --staging-bucket=gs://$BUCKET \\\n",
     "  --scale-tier=BASIC_GPU \\\n",
-    "  --runtime-version=2.3 \\\n",
+    "  --runtime-version=2.5 \\\n",
     "  --python-version=3.7 \\\n",
     "  -- \\\n",
     "  --train-config=gs://$BUCKET/config/config.yaml"
