AI platform deployment
- Added an untested implementation of deploying tensorflow saved model to AI platform.
- Above code works but it's taking forever for a version to be created at AI platform.

--- a/experiments/ai_platform_deploy.ipynb
+++ b/experiments/ai_platform_deploy.ipynb
@@ -2,11 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 58,
    "id": "2a6052b3-ea66-4968-a1f4-74d9ef1e39d5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "!sudo chown -R jupyter:jupyter /home/jupyter/Sentiment-Analysis-of-Amazon-Reviews"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "f86979f6-a726-4844-93e4-94a294f0d90d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
@@ -20,6 +32,60 @@
     "from detectors.tf_gcp.trainer.models.models import CNNModel\n",
     "from detectors.tf_gcp.trainer.data_ops.data_generator import DataGenerator"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "6848be3b-f586-4a53-9528-3f73ecebc2b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PROJECT = 'text-analysis-323506'\n",
+    "REGION = 'us-west1'\n",
+    "BUCKET = 'text-analysis-323506'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "7d72aeb4-179e-42a4-9422-c26b1dca5131",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ['BUCKET'] = BUCKET\n",
+    "os.environ['PROJECT'] = PROJECT\n",
+    "os.environ['REGION'] = REGION\n",
+    "os.environ['TFVERSION'] = '2.6'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "80b736db-1819-4c74-beb2-ff9f488dbc5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Updated property [core/project].\n",
+      "Updated property [compute/region].\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "gcloud config set project $PROJECT\n",
+    "gcloud config set compute/region $REGION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "baa6496a-bf7d-454b-acf3-84d6f8dbee11",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -397,16 +463,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "be9b5322-321c-4476-96e0-b17ff0579fc0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copying file://./saved_model/saved_model.pb [Content-Type=application/octet-stream]...\n",
+      "Copying file://./saved_model/keras_metadata.pb [Content-Type=application/octet-stream]...\n",
+      "Copying file://./saved_model/variables/variables.index [Content-Type=application/octet-stream]...\n",
+      "Copying file://./saved_model/variables/variables.data-00000-of-00001 [Content-Type=application/octet-stream]...\n",
+      "Couldn't read upload tracker file (/home/jupyter/.gsutil/tracker-files/upload_TRACKER_7c1e71ec693244a3ba2c2109f68446dfe26eff3b.-00001__JSON.url): Permission denied. Restarting upload from scratch.\n",
+      "CommandException: Couldn't write tracker file (/home/jupyter/.gsutil/tracker-files/upload_TRACKER_7c1e71ec693244a3ba2c2109f68446dfe26eff3b.-00001__JSON.url): Permission denied. This can happen if gsutil is configured to save tracker files to an unwritable directory)\n",
+      "Removing file://./saved_model/variables/variables.index...\n",
+      "Removing file://./saved_model/keras_metadata.pb...                              \n",
+      "Removing file://./saved_model/saved_model.pb...                                 \n",
+      "CommandException: 1 file/object could not be transferred.                       \n"
+     ]
+    }
+   ],
+   "source": [
+    "! gsutil -m mv ./saved_model gs://text-analysis-323506-aiplatform"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "0dbe2163-3629-417d-8360-a1146f83d62a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc2623ae-d576-4ede-b6bd-79b214ed9694",
+   "metadata": {},
+   "source": [
+    "### Create model endpoint"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "af04bc44-1a25-4e57-a732-8ba343eec673",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using endpoint [https://us-west1-ml.googleapis.com/]\n",
+      "Created ai platform model [projects/text-analysis-323506/models/sentiment_analyser].\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "gcloud ai-platform models create sentiment_analyser --region=$REGION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdeb62c2-7d9c-4880-bc9a-bc9780c0d9f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.environ['MODEL_DIR']=\"gs://text-analysis-323506-aiplatform/saved_model\"\n",
+    "os.environ['VERSION_NAME']=\"V1\"\n",
+    "os.environ['MODEL_NAME']=\"sentiment_analyser\"\n",
+    "os.environ['FRAMEWORK']=\"tensorflow\"\n",
+    "os.environ['INPUT_DATA_FILE']=\"./input.json\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "33abc277-5a71-4cdf-96c7-9156cc67d003",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "gcloud ai-platform versions create $VERSION_NAME \\\n",
+    "  --model=$MODEL_NAME \\\n",
+    "  --origin=$MODEL_DIR \\\n",
+    "  --runtime-version=2.6 \\\n",
+    "  --framework=$FRAMEWORK \\\n",
+    "  --python-version=3.7 \\\n",
+    "  --region=$REGION \\\n",
+    "  --machine-type=n1-standard-2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd4c46ef-75e9-4b4a-b281-7cebc8cc8589",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "gcloud ai-platform predict \\\n",
+    "  --model=$MODEL_NAME \\\n",
+    "  --version=$VERSION_NAME \\\n",
+    "  --json-request=$INPUT_DATA_FILE \\\n",
+    "  --region=$REGION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0beee365-804d-4c12-95a2-11456dd5aad1",
    "metadata": {},
    "outputs": [],
    "source": []
