Adding comments and docstrings to AI platform deploy notebook

--- a/experiments/ai_platform_deploy/ai_platform_deploy.ipynb
+++ b/experiments/ai_platform_deploy/ai_platform_deploy.ipynb
@@ -12,12 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "f86979f6-a726-4844-93e4-94a294f0d90d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import json\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -80,12 +81,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "baa6496a-bf7d-454b-acf3-84d6f8dbee11",
+   "cell_type": "markdown",
+   "id": "64f150e6-a13a-465b-ae9e-75d2ac7d8593",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Read data"
+   ]
   },
   {
    "cell_type": "code",
@@ -179,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "6d940c74-006f-4220-bde7-4fce92fb6d54",
    "metadata": {},
    "outputs": [
@@ -187,12 +188,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5000 1000\n"
+      "Length of train dataframe 5000\n",
+      "Length of validation dataframe 1000\n"
      ]
     }
    ],
    "source": [
-    "print(len(train_df), len(val_df))"
+    "print(\"Length of train dataframe\",len(train_df))\n",
+    "print(\"Length of validation dataframe\", len(val_df))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a98813e3-1c98-4b25-911d-42a4a1317355",
+   "metadata": {},
+   "source": [
+    "### Tokenizer"
    ]
   },
   {
@@ -277,6 +288,14 @@
    "outputs": [],
    "source": [
     "num_features = min(len(tokenizer.word_index) + 1, TOP_K)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "daff5cf4-2027-4684-809f-09ba07b95b0c",
+   "metadata": {},
+   "source": [
+    "### Build and Train CNN model"
    ]
   },
   {
@@ -436,12 +455,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49d2ed1b-0aac-49a3-a911-1478aee4f988",
+   "cell_type": "markdown",
+   "id": "b57a8c92-e1f2-4ae0-a034-17db116638fd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Save model to file system and move it to a GS bucket"
+   ]
   },
   {
    "cell_type": "code",
@@ -500,7 +519,7 @@
    "id": "bc2623ae-d576-4ede-b6bd-79b214ed9694",
    "metadata": {},
    "source": [
-    "### Create model endpoint"
+    "### Create AI Platform model endpoint"
    ]
   },
   {
@@ -539,6 +558,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ea494c76-3798-49ae-bfe7-370e86d1b0ed",
+   "metadata": {},
+   "source": [
+    "### Create a model version"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
    "id": "33abc277-5a71-4cdf-96c7-9156cc67d003",
@@ -565,6 +592,14 @@
     "  --region=$REGION \\\n",
     "  --machine-type=n1-standard-2 \\\n",
     "  --user-output-enabled"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb9550b4-e48e-4290-8df2-73e7c8fd10b3",
+   "metadata": {},
+   "source": [
+    "### Read and preprocess test data "
    ]
   },
   {
@@ -668,6 +703,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5ebd4984-fc6f-4b52-86c7-a2a1bc50331d",
+   "metadata": {},
+   "source": [
+    "### Local predictions "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 46,
    "id": "9e6a95cb-8295-4949-8e78-0582f767ca09",
@@ -714,9 +757,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
     "with open('input.json', 'w') as f:\n",
     "    json.dump(json_entry, f)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0020988b-94a5-43a7-8fb7-769ab0bef2b2",
+   "metadata": {},
+   "source": [
+    "### AI platform predictions"
    ]
   },
   {
