Fixing a minor issue
1. Codes in some cells were out of the visual range of the notebook and hence weren't visible in github.
2. Should always download notebooks from classic jupyter server instead of downloading directly from jupyter lab of Vertex AI workbench notebooks.

--- a/experiments/ai_platform_deploy/ai_platform_deploy.ipynb
+++ b/experiments/ai_platform_deploy/ai_platform_deploy.ipynb
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 26,
    "id": "6e5f5c51-9d11-4a8a-9844-6c768f8eddb4",
    "metadata": {},
    "outputs": [
@@ -310,18 +310,12 @@
      "text": [
       "[CNNModel::build] Building CNN model\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2021-12-11 11:49:32.324626: I tensorflow/core/common_runtime/process_util.cc:146] Creating new thread pool with default inter op setting: 2. Tune using inter_op_parallelism_threads for best performance.\n"
-     ]
     }
    ],
    "source": [
     "Model = CNNModel(num_features=num_features,\n",
-    "                 max_sequence_length=MAX_SEQUENCE_LENGTH).build(Namespace(**{'optimizer': 'adam', 'loss': \"binary_crossentropy\", 'metrics': [\"accuracy\"],'embedding_dim': 200}))"
+    "                 max_sequence_length=MAX_SEQUENCE_LENGTH).build(Namespace(**{'optimizer': 'adam', 'loss': \"binary_crossentropy\", \\\n",
+    "                                                                             'metrics': [\"accuracy\"],'embedding_dim': 200}))"
    ]
   },
   {
