Updating job submitter notebook
Updating the job submitter notebook to submit training job to Vertex AI

--- a/detectors/tf_gcp/vertex_ai_trainer.ipynb
+++ b/detectors/tf_gcp/vertex_ai_trainer.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Training Tensorflow model on Google Cloud AI Platform"
+    "# Training Tensorflow model on Google Cloud Vertex AI"
    ]
   },
   {
@@ -31,9 +31,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "PROJECT = 'text-analysis-323506'\n",
-    "REGION = 'us-west1'\n",
-    "BUCKET = 'text-analysis-323506'"
+    "ENV_VARS = {'PROJECT': 'text-analysis-323506',\n",
+    "            'REGION': 'us-central1',\n",
+    "            'BUCKET': 'text-analysis-323506',\n",
+    "            'MACHINE_TYPE': 'n1-highmem-4',\n",
+    "            'REPLICA_COUNT': 1,\n",
+    "            'EXECUTE_IMAGE_URI': 'us-docker.pkg.dev/vertex-ai/training/tf-gpu.2-8:latest',\n",
+    "            'LOCAL_PACKAGE_PATH': '/home/jupyter/Sentiment-Analysis-of-Amazon-Reviews/',\n",
+    "            'PYTHON_MODULE': 'detectors.tf_gcp.trainer.task'}"
    ]
   },
   {
@@ -42,10 +47,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.environ['BUCKET'] = BUCKET\n",
-    "os.environ['PROJECT'] = PROJECT\n",
-    "os.environ['REGION'] = REGION\n",
-    "os.environ['TFVERSION'] = '2.6'"
+    "for key, value in ENV_VARS.items():\n",
+    "    os.environ[key] = str(value)"
    ]
   },
   {
@@ -114,25 +117,16 @@
     "# Move latest config file to google storage bucket\n",
     "gsutil -m cp -r ../../config gs://$BUCKET\n",
     "\n",
-    "# Set PYTHONPATH enviornment variable\n",
-    "export PYTHONPATH=${PYTHONPATH}:/home/jupyter/Amazon-Reviews-Analysis\n",
-    "\n",
     "# Specify a unique name for the job.\n",
     "JOBNAME=sentiment_analysis_$(date -u +%y%m%d_%H%M%S)\n",
     "echo $REGION $JOBNAME\n",
     "\n",
     "# Submit training job\n",
-    "gcloud ai-platform jobs submit training $JOBNAME \\\n",
-    "  --region=$REGION \\\n",
-    "  --module-name=detectors.tf_gcp.trainer.task \\\n",
-    "  --package-path=/home/jupyter/Sentiment-Analysis-of-Amazon-Reviews/detectors \\\n",
-    "  --job-dir=gs://$BUCKET \\\n",
-    "  --staging-bucket=gs://$BUCKET \\\n",
-    "  --scale-tier=BASIC_GPU \\\n",
-    "  --runtime-version=2.5 \\\n",
-    "  --python-version=3.7 \\\n",
-    "  -- \\\n",
-    "  --train-config=gs://$BUCKET/config/config.yaml"
+    "gcloud ai custom-jobs create \\\n",
+    "    --region=$REGION \\\n",
+    "    --display-name=$JOBNAME \\\n",
+    "    --worker-pool-spec=machine-type=$MACHINE_TYPE,replica-count=$REPLICA_COUNT,executor-image-uri=$EXECUTE_IMAGE_URI,local-package-path=$LOCAL_PACKAGE_PATH,python-module=$PYTHON_MODULE\n",
+    "    --args=--train-config=gs://$BUCKET/config/config.yaml"
    ]
   },
   {
@@ -179,7 +173,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
