--- a/detectors/tf_gcp/vertex_ai_trainer.ipynb
+++ b/detectors/tf_gcp/vertex_ai_trainer.ipynb
@@ -154,9 +154,10 @@
  ],
  "metadata": {
   "environment": {
-   "name": "tf2-gpu.2-6.m79",
+   "kernel": "python3",
+   "name": "tf2-gpu.2-8.m90",
    "type": "gcloud",
-   "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-6:m79"
+   "uri": "gcr.io/deeplearning-platform-release/tf2-gpu.2-8:m90"
   },
   "kernelspec": {
    "display_name": "Python 3",
@@ -173,7 +174,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.12"
   }
  },
  "nbformat": 4,
